[workspace]
members = ["contracts/*", "packages/*"]
resolver = "2"

[workspace.package]
edition    = "2021"

[workspace.dependencies]
# common libs
anyhow = "^1.0"
bech32 = "^0.9"
cosmwasm-std = "^1.5"
cosmwasm-schema = "^1.5"
cosmwasm-storage = "^1.5"
cw2 = "^1.1"
cw721 = { git = "https://github.com/arkprotocol/cw-nfts", branch = "collection-info"} # TODO switch to version 0.18.1/0.19.0, once released
cw721-base = { git = "https://github.com/arkprotocol/cw-nfts", branch = "collection-info"} # TODO switch to version 0.18.1/0.19.0, once released
cw721-016 = { git = "https://github.com/CosmWasm/cw-nfts", tag = "v0.16.0", package = "cw721" }
cw721-base-016  = { git = "https://github.com/CosmWasm/cw-nfts", tag = "v0.16.0", package = "cw721-base" }
cw-ics721-incoming-proxy = { git = "https://github.com/arkprotocol/cw-ics721-proxy.git", tag = "v0.1.0" }
cw-ics721-incoming-proxy-base = { git = "https://github.com/arkprotocol/cw-ics721-proxy.git", tag = "v0.1.0" }
cw-ics721-outgoing-proxy-rate-limit = { git = "https://github.com/arkprotocol/cw-ics721-proxy.git", tag = "v0.1.0" }
cw-ownable      = "^0.5"
cw-paginate-storage = { version = "^2.4", git = "https://github.com/DA0-DA0/dao-contracts.git" }
cw-storage-plus = "^1.1"
cw-multi-test = { version = "^0.20", features = ["cosmwasm_1_2"] }
cw-utils = "^1.0"
sha2 = "^0.10"
serde = "^1.0"
thiserror = "^1.0"
# Stargaze libs
sg-std = "^3.2"
sg-multi-test = "^3.1"
sg721 = "^3.3"
sg721-base = "^3.3"
# packages and contracts
cw-cii = { path = "./packages/cw-cii" }
cw-pause-once = { path = "./packages/cw-pause-once" }
ics721 = { path = "./packages/ics721" }
ics721-types = { path = "./packages/ics721-types" }
zip-optional = { path = "./packages/zip-optional" }
ics721-base = { path = "./contracts/ics721-base"}
ics721-base-tester = { path = "./contracts/cw-ics721-base-tester"}
cw721-tester = { path = "./contracts/cw721-tester"}
sg-ics721 = { path = "./contracts/sg-ics721"}

[profile.release]
codegen-units = 1
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
panic = 'abort'
incremental = false
# Please do not disable these. Doing so will cause overflow checks in
# all workspace members to stop working. Overflows should be errors.
overflow-checks = true
