[package]
name = "cw-ics721-bridge-tester"
version = "0.1.0"
authors = ["ekez <ekez@withoutdoing.com>"]
edition = "2021"
description = "a contract for testing strange counterparty responses with ics721"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { version = "1.1", features = ["ibc3"] }
cosmwasm-storage = "1.1"
cosmwasm-schema = "1.1"
cw-storage-plus = "0.15"
cw2 = "0.15"
thiserror = "1"
cw-ics721-bridge = { version = "*", path = "../cw-ics721-bridge", features = ["library"] }
ics721 = { path = "../../packages/ics721" }
