[package]
name = "cw-ics721-bridge-tester"
version = "0.1.0"
authors = ["ekez <ekez@withoutdoing.com>"]
edition = "2021"
description = "a contract for testing strange counterparty responses with ics721"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { workspace = true, features = ["ibc3"] }
cosmwasm-schema = { workspace = true }
cosmwasm-storage = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
thiserror = { workspace = true }
cw-ics721-bridge = { workspace = true, features = ["library"] }
