[package]
name = "cw-ics721-bridge"
version = "0.0.1"
authors = ["ekez <ekez@withoutdoing.com>"]
edition = "2021"
description = "an implementation of the ICS721 specification for transfering NFTs between blockchains"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { version = "1.1", features = ["ibc3"] }
cosmwasm-schema = "1.1"
cw-storage-plus = "1.0.1"
cw-utils = "1.0.1"
cw2 = "1.0.1"
cw721 = "0.16"
cw721-base = { version = "0.16", features = ["library"] }
thiserror = "1"
serde = "1.0"
cw-paginate = { git = "https://github.com/DA0-DA0/dao-contracts.git", tag = "v2.0.0-beta" }
cw721-proxy-derive = { git = "https://github.com/0xekez/cw721-proxy.git" }
cw-pause-once = { path = "../../packages/cw-pause-once" }
cw-cii = { path = "../../packages/cw-cii" }
zip-optional = { path = "../../packages/zip-optional" }

[dev-dependencies]
cw-multi-test = "0.16.2"
cw721-rate-limited-proxy = { git = "https://github.com/0xekez/cw721-proxy.git" }
