[package]
name = "cw-ics721-bridge"
version = "0.0.1"
authors = ["ekez <ekez@withoutdoing.com>"]
edition = "2021"
description = "an implementation of the ICS721 specification for transfering NFTs between blockchains"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { workspace = true, features = ["ibc3"] }
cosmwasm-schema = { workspace = true }
# TODO: upgrade cw-storage-plus to latest version, once approved commit 6db957 will be merged into main and available in next release.
cw-storage-plus = { rev = "6db957ce730a95141a3ab4dc5ab76fb38e8c0c42", git = "https://github.com/CosmWasm/cw-storage-plus" }
cw-utils = { workspace = true }
cw2 = { workspace = true }
cw721 = { workspace = true }
cw721-base = { workspace = true, features = ["library"] }
thiserror = { workspace = true }
serde = { workspace = true }
cw-paginate = { workspace = true }
cw721-proxy-derive = { workspace = true }
cw-pause-once = { workspace = true }
cw-cii = { workspace = true }
zip-optional = { workspace = true }

[dev-dependencies]
anyhow = "1.0"
cw-multi-test = "0.16.2"
cw721-rate-limited-proxy = { git = "https://github.com/0xekez/cw721-proxy.git" }
