[package]
name = "cw721-tester"
version = "0.1.0"
authors = ["ekez <zekemedley@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
thiserror = { workspace = true }
cw721-metadata-onchain = { workspace = true, features = [ "library" ] }
cw721 = { workspace = true}
