[package]
name = "ics-escrow"
version = "0.1.0"
authors = ["callumanderson <callumanderson745@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = "1.0.0"
cosmwasm-storage = "1.0.0"
cw-storage-plus = "0.13.4"
cw2 = "0.13.4"
cw721 = "0.13"
cw721-base = { version = "0.13", features = ["library"] }
schemars = "0.8.8"
serde = { version = "1.0.140", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }

[dev-dependencies]
cw721-ics = { version = "*", path = "../cw721-ics" }
anyhow = "1.0.58"
cosmwasm-schema = "1.0.0"
cw-multi-test = "0.13.4"
