[package]
name = "ics721-base-tester"
version = "0.1.0"
authors = ["ekez <ekez@withoutdoing.com>"]
edition = "2021"
description = "a contract for testing strange counterparty responses with ics721"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { workspace = true, features = ["ibc3"] }
cosmwasm-schema = { workspace = true }
cosmwasm-storage = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
ics721 = { workspace = true }
thiserror = { workspace = true }
