[package]
name = "ics721-escrow"
version = "0.1.0"
authors = ["callumanderson <callumanderson745@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = "1.0.0"
cosmwasm-storage = "1.0.0"
cw-storage-plus = "0.13.4"
cw2 = "0.13.4"
cw721 = "0.13.4"
cw721-base = { version = "0.13.4", features = [] } # TODO: add library back in when: https://github.com/CosmWasm/cw-nfts/pull/76
schemars = "0.8.10"
serde = { version = "1.0.140", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }

[dev-dependencies]
anyhow = "1.0.58"
cosmwasm-schema = "1.0.0"
cw-multi-test = "0.13.4"